{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 352,
  "lineage": "188589fc-21d0-b906-9804-93e381ee7ec1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:043438039006:listener/app/autoscaling-project-alb/a2bf98610f2cf7fb/278666034f329cda",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:043438039006:targetgroup/autoscaling-project-tg/494e30d4bf2a9997",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:043438039006:listener/app/autoscaling-project-alb/a2bf98610f2cf7fb/278666034f329cda",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:043438039006:loadbalancer/app/autoscaling-project-alb/a2bf98610f2cf7fb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.as-alb",
            "aws_lb_target_group.as-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_subnet.public-subnet-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0307120ab7a98017b",
            "association_id": "eipassoc-04b64e1d2b781e5dd",
            "domain": "vpc",
            "id": "eipalloc-0307120ab7a98017b",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0223e3b72a7f3f40d",
            "private_dns": "ip-10-0-6-112.eu-west-1.compute.internal",
            "private_ip": "10.0.6.112",
            "public_dns": "ec2-54-74-45-62.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.74.45.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "autoscaling-project-NAT-eip"
            },
            "tags_all": {
              "Name": "autoscaling-project-NAT-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043438039006:internet-gateway/igw-0618585c726ab4560",
            "id": "igw-0618585c726ab4560",
            "owner_id": "043438039006",
            "tags": {
              "Name": "autoscaling-project-igw"
            },
            "tags_all": {
              "Name": "autoscaling-project-igw"
            },
            "vpc_id": "vpc-00d237c0b3dba0daf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "as-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:043438039006:loadbalancer/app/autoscaling-project-alb/a2bf98610f2cf7fb",
            "arn_suffix": "app/autoscaling-project-alb/a2bf98610f2cf7fb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "autoscaling-project-alb-824085903.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:043438039006:loadbalancer/app/autoscaling-project-alb/a2bf98610f2cf7fb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "autoscaling-project-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0832e8215e379c11b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a5a0d2ca2169e60"
              },
              {
                "subnet_id": "subnet-06aabf73a5728f69c"
              },
              {
                "subnet_id": "subnet-0f2e37169283d697a"
              }
            ],
            "subnets": [
              "subnet-00a5a0d2ca2169e60",
              "subnet-06aabf73a5728f69c",
              "subnet-0f2e37169283d697a"
            ],
            "vpc_id": "vpc-00d237c0b3dba0daf",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_subnet.public-subnet-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "as-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:043438039006:targetgroup/autoscaling-project-tg/494e30d4bf2a9997",
            "arn_suffix": "targetgroup/autoscaling-project-tg/494e30d4bf2a9997",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:043438039006:targetgroup/autoscaling-project-tg/494e30d4bf2a9997",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "autoscaling-project-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00d237c0b3dba0daf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0307120ab7a98017b",
            "association_id": "eipassoc-04b64e1d2b781e5dd",
            "connectivity_type": "public",
            "id": "nat-084ec428537883eaa",
            "network_interface_id": "eni-0223e3b72a7f3f40d",
            "private_ip": "10.0.6.112",
            "public_ip": "54.74.45.62",
            "subnet_id": "subnet-00a5a0d2ca2169e60",
            "tags": {
              "Name": "autoscaling-project-NAT-gateway"
            },
            "tags_all": {
              "Name": "autoscaling-project-NAT-gateway"
            }
          },
          "dependencies": [
            "aws_eip.NAT-eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043438039006:route-table/rtb-06a15a2b05f7d9d3a",
            "id": "rtb-06a15a2b05f7d9d3a",
            "owner_id": "043438039006",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0618585c726ab4560",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "autoscaling-project-rt"
            },
            "tags_all": {
              "Name": "autoscaling-project-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d237c0b3dba0daf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043438039006:route-table/rtb-0ef2b21eb4e49cdfa",
            "id": "rtb-0ef2b21eb4e49cdfa",
            "owner_id": "043438039006",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084ec428537883eaa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "autoscaling-project-rtb1"
            },
            "tags_all": {
              "Name": "autoscaling-project-rtb1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d237c0b3dba0daf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043438039006:route-table/rtb-039eab3b6c6a605e7",
            "id": "rtb-039eab3b6c6a605e7",
            "owner_id": "043438039006",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084ec428537883eaa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "autoscaling-project-rtb2"
            },
            "tags_all": {
              "Name": "autoscaling-project-rtb2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d237c0b3dba0daf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043438039006:route-table/rtb-0a9e4a2eada211433",
            "id": "rtb-0a9e4a2eada211433",
            "owner_id": "043438039006",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084ec428537883eaa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "autoscaling-project-rtb3"
            },
            "tags_all": {
              "Name": "autoscaling-project-rtb3"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d237c0b3dba0daf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045e92a69f3e4fd33",
            "route_table_id": "rtb-0ef2b21eb4e49cdfa",
            "subnet_id": "subnet-01554ae7b482a768d"
          },
          "dependencies": [
            "aws_eip.NAT-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.rtb1",
            "aws_subnet.private-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c61cd2b356356b6",
            "route_table_id": "rtb-039eab3b6c6a605e7",
            "subnet_id": "subnet-0b61474c8b2cb04d0"
          },
          "dependencies": [
            "aws_eip.NAT-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.rtb2",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e126b1cf23a9b0b9",
            "route_table_id": "rtb-0a9e4a2eada211433",
            "subnet_id": "subnet-0aa022d5408459afd"
          },
          "dependencies": [
            "aws_eip.NAT-eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.rtb3",
            "aws_subnet.private-subnet-3",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042c542050b61c7ad",
            "route_table_id": "rtb-06a15a2b05f7d9d3a",
            "subnet_id": "subnet-00a5a0d2ca2169e60"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0748bf30652da00de",
            "route_table_id": "rtb-06a15a2b05f7d9d3a",
            "subnet_id": "subnet-06aabf73a5728f69c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main",
            "aws_subnet.public-subnet-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d3972d1f9bee08f",
            "route_table_id": "rtb-06a15a2b05f7d9d3a",
            "subnet_id": "subnet-0f2e37169283d697a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main",
            "aws_subnet.public-subnet-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043438039006:security-group/sg-0832e8215e379c11b",
            "description": "Allow HHTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0832e8215e379c11b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "autoscaling-project-alb-sg",
            "name_prefix": "",
            "owner_id": "043438039006",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "autoscaling-project-alb-sg"
            },
            "tags_all": {
              "Name": "autoscaling-project-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d237c0b3dba0daf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043438039006:security-group/sg-0ac96fcbbcb0f6c71",
            "description": "Security group for lunch template",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac96fcbbcb0f6c71",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from alb sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0832e8215e379c11b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "autoscaling-project-ec2-sg",
            "name_prefix": "",
            "owner_id": "043438039006",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "autoscaling-project-ec2-sg"
            },
            "tags_all": {
              "Name": "autoscaling-project-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d237c0b3dba0daf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043438039006:subnet/subnet-01554ae7b482a768d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01554ae7b482a768d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043438039006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "autoscaling-project-private-subnet1"
            },
            "tags_all": {
              "Name": "autoscaling-project-private-subnet1"
            },
            "vpc_id": "vpc-00d237c0b3dba0daf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043438039006:subnet/subnet-0b61474c8b2cb04d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b61474c8b2cb04d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043438039006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "autoscaling-project-private-subnet2"
            },
            "tags_all": {
              "Name": "autoscaling-project-private-subnet2"
            },
            "vpc_id": "vpc-00d237c0b3dba0daf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043438039006:subnet/subnet-0aa022d5408459afd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa022d5408459afd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043438039006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "autoscaling-project-private-subnet3"
            },
            "tags_all": {
              "Name": "autoscaling-project-private-subnet3"
            },
            "vpc_id": "vpc-00d237c0b3dba0daf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043438039006:subnet/subnet-00a5a0d2ca2169e60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a5a0d2ca2169e60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043438039006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "autoscaling-project-public-subnet-1"
            },
            "tags_all": {
              "Name": "autoscaling-project-public-subnet-1"
            },
            "vpc_id": "vpc-00d237c0b3dba0daf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043438039006:subnet/subnet-06aabf73a5728f69c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06aabf73a5728f69c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043438039006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "autoscaling-project-public-subnet-2"
            },
            "tags_all": {
              "Name": "autoscaling-project-public-subnet-2"
            },
            "vpc_id": "vpc-00d237c0b3dba0daf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043438039006:subnet/subnet-0f2e37169283d697a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2e37169283d697a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043438039006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "autoscaling-project-public-subnet-3"
            },
            "tags_all": {
              "Name": "autoscaling-project-public-subnet-3"
            },
            "vpc_id": "vpc-00d237c0b3dba0daf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:043438039006:vpc/vpc-00d237c0b3dba0daf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2602b24e7ca85bd",
            "default_route_table_id": "rtb-05d1244694d40a293",
            "default_security_group_id": "sg-066dd61e4b6ce6c2e",
            "dhcp_options_id": "dopt-06b969f5c1bc4c954",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d237c0b3dba0daf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05d1244694d40a293",
            "owner_id": "043438039006",
            "tags": {
              "Name": "autoscaling-project-vpc"
            },
            "tags_all": {
              "Name": "autoscaling-project-vpc"
            }
          }
        }
      ]
    }
  ]
}